B-F Sandbox Full-Backup/src/objects/Competitive_Agreement__c.object
<CustomObject>
    <description>INFOWELDERS- Stores Competitive Agreements that have been made with this Outlet</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>INFOWELDERS</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Agreements</relationshipLabel>
        <relationshipName>Competitive_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <description>INFOWELDERS</description>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <description>INFOWELDERS</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Notes__c</fullName>
        <description>INFOWELDERS</description>
        <label>Description/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INFOWELDERS</description>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Competitive Agreements</relationshipLabel>
        <relationshipName>Competitive_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>INFOWELDERS</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>First Pour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X30_Prior_Notifaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(30) Days Prior Notification</description>
        <inlineHelpText>(30) Days Prior Notification</inlineHelpText>
        <label>(30) Days Prior Notification</label>
        <type>Checkbox</type>
    </fields>
    <label>Competitive Agreement</label>
    <nameField>
        <label>Competative Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitive Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>